# 42

./: .gitignore
corewar/: CMakeLists.txt  Makefile  README.md
corewar/includes/: asm.h  commands.h  op.h
corewar/src/asm/: asm.c  ft_error.c
corewar/src/asm/assembler/: assembler.c  chk_arguments.c  chk_commands.c  chk_lables.c  cmnd_size.c  is_command.c  is_label.c  read_arguments.c  read_file.c  rewrite_code.c  rewrite_content.c  skip_space.c  validation.c
corewar/src/asm/libft/: Makefile  ft_atoi_base.c  ft_itoa_base.c  ft_strarraydel.c  ft_strdup.c  ft_strlen.c  ft_strpcat.c  ft_strsplit.c  ft_strsub.c  get_next_line.c  libft.h
fdf/includes/: fdf.h
filler/includes/: filler.h
filler/resources/: filler.trace  fsinged.filler
filler/src/: main.c  t_filler.c
lem-in/src/: sol_option_colours.c
printf/: Makefile
printf/includes/: ft_printf.h
printf/src/: ft_binary.c  ft_double.c  ft_double_binary.c  ft_double_itoa.c  ft_flags.c  ft_printf.c  ft_str.c
