cmake_minimum_required(VERSION 3.14)
project(corewar_42 C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(src/asm/libft)
add_definitions(-Wall -Wextra -Werror)

add_executable(corewar_42
        includes/asm.h
        includes/commands.h
        includes/op.h
        src/asm/asm.c
        src/asm/ft_error.c
        src/asm/assembler/assembler.c
        src/asm/assembler/chk_arguments.c
        src/asm/assembler/chk_commands.c
        src/asm/assembler/is_command.c
        src/asm/assembler/read_arguments.c
        src/asm/assembler/skip_space.c
        src/asm/assembler/validation.c
        src/asm/assembler/read_file.c
        src/asm/assembler/chk_lables.c
        src/asm/assembler/is_label.c
        src/asm/assembler/rewrite_code.c
        src/asm/assembler/rewrite_content.c
        src/asm/assembler/cmnd_size.c
        src/asm/libft/ft_atoi.c
        src/asm/libft/ft_bzero.c
        src/asm/libft/ft_isalnum.c
        src/asm/libft/ft_isalpha.c
        src/asm/libft/ft_isascii.c
        src/asm/libft/ft_isdigit.c
        src/asm/libft/ft_isprint.c
        src/asm/libft/ft_itoa.c
        src/asm/libft/ft_itoa_base.c
        src/asm/libft/ft_lstadd.c
        src/asm/libft/ft_lstdel.c
        src/asm/libft/ft_lstdelone.c
        src/asm/libft/ft_lstiter.c
        src/asm/libft/ft_lstmap.c
        src/asm/libft/ft_lstnew.c
        src/asm/libft/ft_max.c
        src/asm/libft/ft_memalloc.c
        src/asm/libft/ft_memccpy.c
        src/asm/libft/ft_memchr.c
        src/asm/libft/ft_memcmp.c
        src/asm/libft/ft_memcpy.c
        src/asm/libft/ft_memdel.c
        src/asm/libft/ft_memmove.c
        src/asm/libft/ft_memset.c
        src/asm/libft/ft_min.c
        src/asm/libft/ft_putchar.c
        src/asm/libft/ft_putchar_fd.c
        src/asm/libft/ft_putendl.c
        src/asm/libft/ft_putendl_fd.c
        src/asm/libft/ft_putnbr.c
        src/asm/libft/ft_putnbr_fd.c
        src/asm/libft/ft_putstr.c
        src/asm/libft/ft_putstr_fd.c
        src/asm/libft/ft_sqrt.c
        src/asm/libft/ft_strcat.c
        src/asm/libft/ft_strchr.c
        src/asm/libft/ft_strclr.c
        src/asm/libft/ft_strcmp.c
        src/asm/libft/ft_strcpy.c
        src/asm/libft/ft_strdel.c
        src/asm/libft/ft_strdup.c
        src/asm/libft/ft_strequ.c
        src/asm/libft/ft_striter.c
        src/asm/libft/ft_striteri.c
        src/asm/libft/ft_strjoin.c
        src/asm/libft/ft_strlcat.c
        src/asm/libft/ft_strlen.c
        src/asm/libft/ft_strmap.c
        src/asm/libft/ft_strmapi.c
        src/asm/libft/ft_strncat.c
        src/asm/libft/ft_strncmp.c
        src/asm/libft/ft_strncpy.c
        src/asm/libft/ft_strnequ.c
        src/asm/libft/ft_strnew.c
        src/asm/libft/ft_strnstr.c
        src/asm/libft/ft_strpcat.c
        src/asm/libft/ft_strrchr.c
        src/asm/libft/ft_strsplit.c
        src/asm/libft/ft_strstr.c
        src/asm/libft/ft_strsub.c
        src/asm/libft/ft_strtrim.c
        src/asm/libft/ft_tolower.c
        src/asm/libft/ft_toupper.c
        src/asm/libft/ft_strarraydel.c
        src/asm/libft/get_next_line.c
        src/asm/libft/get_next_line.h
        src/asm/libft/libft.h
        src/asm/libft/ft_atoi_base.c
        )

